--- a/pages/project/index.wxml
+++ b/pages/project/index.wxml
@@ -1,10 +1,7 @@
 <!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<import src="../../components/project-item.wxml"/>
+<view class="project-container">
+  <block wx:for="{{[1]}}">
+    <template is="projectItem" />
+  </block>
 </view>
