--- a/pages/project/index.wxss
+++ b/pages/project/index.wxss
@@ -1,22 +1,89 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+page {
+  display: block;
+  min-height: 100%;
+  background-color: #EFEFF4;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.project-container {
+  margin: 0
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.project-item {
+  margin-top: 15px;
+  background-color: #ffffff;
+  font-size: 15px;
 }
-
-.usermotto {
-  margin-top: 200px;
-
+.item-head {
+  height: 40px;
+  line-height: 40px;
+  border-bottom: 1px solid #EFEFF4;
+  padding: 0 13px 0 18px;
+  overflow: hidden;
+}
+.post-title:before {
+  width: 18px;
+  height: 1px;
+  overflow: hidden;
+  content: '';
+  background-color: #D38297;
+  position: absolute;
+  left: -19px;
+  top: 50%;
+  margin: -0.5px 0 0 0;
+}
+.post-title {
+  color: #D38297;
+  height: 25px;
+  line-height: 25px;
+  padding: 0 13px;
+  font-size: 13px;
+  border: 1px solid #D38297;
+  position: relative;
+  border-radius: 25px;
+  display: inline-block;
+  box-sizing: border-box
+}
+.project-price {
+  color: #FF6700;
+  float: right;
+  height: 21px;
+  line-height: 21px;
+  overflow: hidden;
+  position: relative;
+  top: 12px;
+}
+.item-body {
+  color: #6E6E70;
+  font-size: 15px;
+  line-height: 21px;
+  padding: 0 8px;
+}
+.project-title {
+  line-height: 36px;
+  color: #4B4B4B;
+  font-size: 15px;
+  font-family: PingFangSC-Medium;
+}
+.project-desc {
+  line-height: 21px;
+  padding: 0 12px 0 3px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  height: 42px;
+}
+.project-foot {
+  padding: 7.5px 0;
+  line-height: 17px;
+  font-size: 12px;
+  color: #9E9E9E;
+  overflow: hidden;
+}
+.bid-num {
+  float: left;
+}
+.public-time {
+   float: right;
+   margin-right: 5px;
 }
