--- a/pages/project/index.wxml
+++ b/pages/project/index.wxml
@@ -1,7 +1,9 @@
 <!--index.wxml-->
 <import src="../../components/project-item.wxml"/>
 <view class="project-container">
-  <block wx:for="{{[1]}}">
-    <template is="projectItem" />
-  </block>
+  <scroll-view style="height: 100%;" scroll-y="true" bindscrolltolower="lower">
+    <block wx:for="{{[1, 2, 3, 4, 5]}}">
+      <template is="projectItem" />
+    </block>
+  </scroll-view>
 </view>
