--- a/pages/freelancer/index.wxml
+++ b/pages/freelancer/index.wxml
@@ -1,15 +1,9 @@
 <!--index.wxml-->
+<import src="../../components/freelancer-item.wxml"/>
 <view class="container">
-  <view wx:fow="{{users}}" wx:for-index="idx" wx:for-item="user" class="list-box">
-    <view class="top">
-      <image class="avatar" src="{{user.avatar}}" />
-      <view class="desc">
-        <view class="main">
-          <text class="name">{{user.name}}</text>
-          <text class="price">{{user.hourly}}/h</text>
-        </view>
-        <text class="name">{{user.title}}</text>
-      </view>
-    </view>
-  </view>
+  <scroll-view style="height: {{windowHeight}}px;" scroll-y="true" bindscrolltolower="lower">
+    <block wx:fow="{{users}}" class="list-box">
+      <template is="freelancerItem" data="{{item}}" />
+    </block>
+  </scroll-view>
 </view>
