--- a/pages/freelancer/index.wxml
+++ b/pages/freelancer/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <import src="../../components/freelancer-item.wxml"/>
-<view class="container">
+<view class="user-container">
   <scroll-view style="height: {{windowHeight}}px;" scroll-y="true" lower-threshold="50" bindscrolltolower="lower">
     <block wx:for="{{users}}" wx:key="*this" wx:for-item="user">
       <template is="freelancerItem" data="{{...user}}" />
