--- a/pages/project/index.wxml
+++ b/pages/project/index.wxml
@@ -3,7 +3,9 @@
 <view class="project-container">
   <scroll-view style="height: {{windowHeight}}px;" scroll-y="true" bindscrolltolower="lower">
     <block wx:for="{{[1, 2, 3, 4, 5]}}" wx:key="*this" wx:for-item="project">
-      <template is="projectItem" data="{{project}}" />
+      <view bindtap="bindViewTap">
+        <template is="projectItem" data="{{project}}" />
+      </view>
     </block>
   </scroll-view>
 </view>
