--- a/components/project-item.wxml
+++ b/components/project-item.wxml
@@ -2,8 +2,8 @@
   <view class="project-item">
     <view class="item-head">
       <view class="post-title">{{project.category}}</view>
-      <view class="project-price" wx:if="{{project.paymethod === 'fixed'}}">{{project.budget}}元</view>
-      <view class="project-price" wx:else>¥{{project.expert}}/h</view>
+      <view class="project-price" wx:if="{{project.paymethod === 'fixed'}}">固定价格</view>
+      <view class="project-price" wx:else>时薪制</view>
     </view>
     <view class="item-body">
       <view class="project-title">{{project.name}}</view>
