--- a/pages/freelancer/index.wxml
+++ b/pages/freelancer/index.wxml
@@ -2,7 +2,7 @@
 <import src="../../components/freelancer-item.wxml"/>
 <view class="user-container">
   <scroll-view style="height: {{windowHeight}}px;" scroll-y="true" lower-threshold="50" bindscrolltolower="lower">
-    <block wx:for="{{users}}" wx:key="*this" wx:for-item="user">
+    <block wx:for="{{users}}" wx:key="id" wx:for-item="user">
       <template is="freelancerItem" data="{{...user}}" />
     </block>
   </scroll-view>
