--- a/pages/comment/index.wxml
+++ b/pages/comment/index.wxml
@@ -2,8 +2,8 @@
 <import src="../../components/comment-item.wxml"/>
 <view class="comment-container">
   <view class="comment-page-title">共{{count}}条评论</view>
-  <scroll-view style="height: {{windowHeight}}px;" scroll-y="true" bindscrolltolower="lower">
-    <block wx:for="{{[1]}}" wx:key="*this" wx:for-item="comment">
+  <scroll-view style="height: {{windowHeight}}px;" scroll-y="true" bindscrolltolower="getData">
+    <block wx:for="{{comments}}" wx:key="*this" wx:for-item="comment">
       <view class="comment-item">
         <template is="commentItem" data="{{comment}}" />
       </view>
