--- a/pages/freelancer/index.wxss
+++ b/pages/freelancer/index.wxss
@@ -84,13 +84,13 @@ page {
   font-size: 30rpx;
   color: #6E6E70;
   letter-spacing: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-wrap: break-word;
-  word-break: break-all;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  max-height:84rpx;
+  word-break:break-all;
 }
 
 .list-box .skills .skill {
