--- a/pages/freelancer-detail/index.wxss
+++ b/pages/freelancer-detail/index.wxss
@@ -11,35 +11,65 @@ page {
   position: relative;
   text-align: center;
   line-height: 1;
-  padding: 0 70rpx;
+  padding: 0 60rpx;
 }
 
+.profile .workload {
+  display: inline-block;
+  width: 30rpx;
+  height: 4px;
+  border-bottom: 1px solid #c46c85;
+  position: absolute;
+  top: 50rpx;
+  left: 0;
+}
+
+.profile .workload-txt {
+  position: absolute;
+  top: 40rpx;
+  left: 30rpx;
+  font-size: 26rpx;
+  padding: 5rpx 10rpx;
+  border-radius: 18rpx;
+  color: #c46c85;
+  border: solid 1px #c46c85;
+}
 
 .profile .avatar {
-  margin-top: 45rpx;
+  margin-top: 30rpx;
   display: inline-block;
-  width: 200rpx;
-  height: 200rpx;
+  width: 140rpx;
+  height: 140rpx;
   border-radius: 50%;
   border: solid 1px #ff6700;
 }
 
+.profile .vip {
+  display: inline-block;
+  width: 42rpx;
+  height: 42rpx;
+  position: absolute;
+  top: 150rpx;
+  left: 48%;
+}
+
 .profile .nickname {
   display: block;
-  font-size: 46rpx;
+  font-size: 32rpx;
   color: #4b4b4b;
   margin-top: 30rpx;
   font-weight: 700;
+  color: #4b4b4b;
 }
 
 .profile .info {
-  margin-top: 25rpx;
+  margin-top: 20rpx;
   color: #777;
   vertical-align: middle;
 }
 
 .profile .info .hour {
-  font-size: 38rpx;
+  font-size: 26rpx;
 }
 
 .profile .info .su-line {
@@ -48,13 +78,13 @@ page {
 
 .profile .info .biaoqian {
   display: inline-block;
-  width: 45rpx;
-  height: 45rpx;
+  width: 35rpx;
+  height: 35rpx;
   vertical-align: middle;
 }
 
 .profile .info .title {
-  font-size: 35rpx;
+  font-size: 26rpx;
   padding: 5rpx 10rpx;
   border: solid 1px #989898;
   border-radius: 4px;
@@ -63,9 +93,9 @@ page {
 
 .profile .desc-down {
   display: block;
-  font-size: 38rpx;
+  font-size: 26rpx;
   color: #4b4b4b;
-  margin-top: 40rpx;
+  margin-top: 30rpx;
   text-align: left;
   line-height: 1.4;
   -webkit-box-orient: vertical;
@@ -74,16 +104,16 @@ page {
   display:-webkit-box;
   -webkit-line-clamp:3;
   -webkit-box-orient:vertical;
-  max-height:150rpx;
+  max-height: 150rpx;
   word-break:break-all;
   cursor: pointer;
 }
 
 .profile .desc-up {
   display: block;
-  font-size: 38rpx;
+  font-size: 26rpx;
   color: #4b4b4b;
-  margin-top: 40rpx;
+  margin-top: 30rpx;
   text-align: left;
   line-height: 1.4;
   cursor: pointer;
@@ -91,9 +121,9 @@ page {
 
 .profile .icon-down {
   display: inline-block;
-  width: 60rpx;
+  width: 55rpx;
   height: 30rpx;
-  margin-top: 25rpx;
+  margin-top: 20rpx;
 }
 
 .row-item {
@@ -105,15 +135,15 @@ page {
 
 .row-item .icon {
   display: inline-block;
-  width: 44rpx;
-  height: 48rpx;
+  width: 35rpx;
+  height: 38rpx;
   vertical-align: bottom;
   margin-left: 43rpx;
 }
 
 .row-item .title {
-  margin-left: 30rpx;
-  font-size: 46rpx;
+  margin-left: 20rpx;
+  font-size: 32rpx;
 }
 
 .row-item .detail {
@@ -136,6 +166,8 @@ page {
 .row-item .detail .detail-item {
   padding: 30rpx 0;
   border-bottom: solid 2px #fbfbfb;
+  color: #6e6e70;
+  font-size: 30rpx;
 }
 
 .row-item .detail .detail-item:last-child {
@@ -145,41 +177,43 @@ page {
 
 .row-item .detail .time-row {
   display: flex;
-  margin-top: 35rpx;
+  margin-top: 25rpx;
 }
 
 .row-item .detail .time-icon {
   display: inline-block;
-  width: 40rpx;
-  height: 40rpx;
-  vertical-align: bottom;
+  width: 26rpx;
+  height: 26rpx;
+  vertical-align: middle;
 }
 
 .row-item .detail .time {
-  font-size: 37rpx;
+  font-size: 26rpx;
   color: #9e9e9e;
-  margin-left: 25rpx;
+  margin-left: 15rpx;
   flex: 1;
+  vertical-align: bottom;
 }
 
 .row-item .detail .name {
   display: block;
-  font-size: 43rpx;
+  font-size: 30rpx;
   color: #4b4b4b;
 }
 
 .row-item .detail .detail-desc {
   line-height: 1.3;
+  font-size: 30rpx;
 }
 
 .row-item .detail .job-title {
-  font-size: 38rpx;
+  font-size: 30rpx;
   color: #4b4b4b;
 }
 
 .row-item .detail .s-title {
   color: #9e9e9e;
-  margin-top: 30rpx;
+  margin-top: 20rpx;
   display:inline-block;
 }
 
@@ -190,31 +224,34 @@ page {
 
 .row-item .team-item .team-avatar {
   display: inline-block;
-  width: 140rpx;
-  height: 140rpx;
-  margin-right: 30rpx;
+  width: 100rpx;
+  height: 100rpx;
+  margin-right: 10rpx;
 }
 
 .row-item .team-item .team-main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .row-item .team-item .team-name {
-  font-size: 43rpx;
+  font-size: 32rpx;
+  color: #4b4b4b;
 }
 
 .row-item .team-item .peole-icon {
   display: inline-block;
-  width: 40rpx;
-  height: 40rpx;
+  width: 30rpx;
+  height: 30rpx;
   margin-right: 15rpx;
   vertical-align: bottom;
 }
 
 .row-item .team-item .team-content {
   display: block;
-  margin-top: 15rpx;
+  margin-top: 10rpx;
+  color: #777;
+  font-size: 26rpx;
 }
