--- a/pages/team-detail/index.wxml
+++ b/pages/team-detail/index.wxml
@@ -50,7 +50,7 @@
     <text class="name">啊啊啊啊啊啊啊</text>
     <p class="info">
       <span>类型：产品设计</span>
-      <time><image class="icon-time" src="http://static.clouderwork.com/m-test/dist/img/time_icon.png" />2014-06</time>
+      <time><image class="icon-time-sm" src="http://static.clouderwork.com/m-test/dist/img/time_icon.png" />2014-06</time>
     </p>
     <p class="description">
       <span>项目简介：</span> 阿斯顿发阿斯顿发阿斯顿发阿斯顿发阿斯顿发
