--- a/pages/freelancer-detail/index.wxss
+++ b/pages/freelancer-detail/index.wxss
@@ -17,48 +17,50 @@ page {
 .profile .workload {
   display: inline-block;
   width: 30rpx;
-  height: 4px;
+  height: 0;
+  overflow: hidden;
   border-bottom: 1px solid #c46c85;
   position: absolute;
-  top: 50rpx;
+  top: 51rpx;
   left: 0;
 }
 
 .profile .workload-txt {
   position: absolute;
-  top: 40rpx;
+  top: 32rpx;
   left: 30rpx;
   font-size: 26rpx;
-  padding: 5rpx 10rpx;
-  border-radius: 18rpx;
+  padding: 6rpx 12rpx;
+  border-radius: 36rpx;
   color: #c46c85;
   border: solid 1px #c46c85;
 }
 
 .profile .avatar {
-  margin-top: 30rpx;
-  display: inline-block;
+  margin: 30rpx auto 0;
+  display: block;
   width: 140rpx;
   height: 140rpx;
   border-radius: 50%;
   border: solid 1px #ff6700;
+  box-sizing: border-box;
 }
 
 .profile .vip {
-  display: inline-block;
-  width: 42rpx;
-  height: 42rpx;
-  position: absolute;
-  top: 150rpx;
-  left: 48%;
+  display:inline-block;
+  width:28rpx;
+  height:28rpx;
+  position:absolute;
+  top:153rpx;
+  left:50%;
+  margin-left:-14rpx;
 }
 
 .profile .nickname {
   display: block;
   font-size: 32rpx;
   color: #4b4b4b;
-  margin-top: 30rpx;
-  font-weight: 700;
+  margin-top: 25rpx;
   color: #4b4b4b;
 }
 
@@ -73,7 +75,12 @@ page {
 }
 
 .profile .info .su-line {
-  color: #4b4b4b;
+  color:#4b4b4b;
+  height:24rpx;
+  overflow:hidden;
+  display:inline-block;
+  position:relative;
+  top:3rpx;
 }
 
 .profile .info .biaoqian {
@@ -87,15 +94,16 @@ page {
   font-size: 26rpx;
   padding: 5rpx 10rpx;
   border: solid 1px #989898;
-  border-radius: 4px;
-  margin-left: 15rpx;
+  border-radius: 60rpx;
+  margin-left: 10rpx;
+  display:inline-block;
 }
 
 .profile .desc-down {
   display: block;
   font-size: 26rpx;
   color: #4b4b4b;
-  margin-top: 30rpx;
+  margin-top: 25rpx;
   text-align: left;
   line-height: 1.4;
   -webkit-box-orient: vertical;
@@ -120,19 +128,21 @@ page {
 }
 
 .profile .icon-down {
-  display: inline-block;
-  width: 55rpx;
-  height: 30rpx;
-  margin-top: 20rpx;
+  display: block;
+  width: 40rpx;
+  height: 22rpx;
+  margin: 20rpx auto 0;
 }
 
 .row-item {
-  padding: 25rpx 0;
+  padding: 21rpx 0 20rpx;
   background-color: #fff;
   margin-top: 20rpx;
   color: #777;
 }
-
+.row-item-time {
+  padding: 30rpx 0 32rpx;
+}
 .row-item .icon {
   display: inline-block;
   width: 35rpx;
@@ -150,7 +160,7 @@ page {
 .row-item .detail {
   border-top: solid 2px #fbfbfb;
   display: block;
-  margin-top: 35rpx;
+  margin-top: 21rpx;
   padding: 0 43rpx
 }
 
@@ -159,8 +169,9 @@ page {
   color: #6e6e70;
   font-size: 24rpx;
   background: #eef1f8;
-  padding: 15rpx 25rpx;
-  border-radius: 20rpx;
+  padding: 11rpx 15rpx 8rpx 18rpx;
+  border-radius: 60rpx;
+  line-height: 33rpx;
   margin: 20rpx 20rpx 0 0;
 }
 
