--- a/components/freelancer-item.wxml
+++ b/components/freelancer-item.wxml
@@ -1,13 +1,13 @@
 <template name="freelancerItem">
-  <view class="list-box" data-id="{{id}}" bindtap="goDetail">
+  <view class="list-box" data-id="{{id}}" data-ftype="{{ftype}}" bindtap="goDetail">
     <view class="top">
       <image wx:if="{{ftype === 'f'}}" class="avatar" src="{{avatar}}" />
       <image wx:if="{{ftype === 't'}}" class="avatar" src="{{logo}}" />
       <view class="desc">
         <view class="main">
           <text class="name">{{name}}</text>
-          <text wx:if="{{ftype === 'f'}}" class="price">{{hourly}}/h</text>
-          <text wx:if="{{ftype === 't'}}" class="price">{{hourly_min}}-{{hourly_max}}/h</text>
+          <text wx:if="{{ftype === 'f'}}" class="price">￥{{hourly}}/h</text>
+          <text wx:if="{{ftype === 't'}}" class="price">￥{{hourly_min}}-{{hourly_max}}/h</text>
         </view>
         <text wx:if="{{ftype === 'f'}}" class="title">{{title}}</text>
       </view>
