--- a/components/freelancer-item.wxml
+++ b/components/freelancer-item.wxml
@@ -6,8 +6,8 @@
       <view class="desc">
         <p class="main">
           <text class="name">{{name}}</text>
-          <text wx:if="{{ftype === 'f'}}" class="price">{{hourly}}/h</text>
-          <text wx:if="{{ftype === 't'}}" class="price">{{hourly_min}}-{{hourly_max}}/h</text>
+          <text wx:if="{{ftype === 'f'}}" class="price">￥{{hourly}}/h</text>
+          <text wx:if="{{ftype === 't'}}" class="price">￥{{hourly_min}}-{{hourly_max}}/h</text>
         </p>
         <text wx:if="{{ftype === 'f'}}" class="title">{{title}}</text>
       </view>
