--- a/pages/team-detail/index.wxss
+++ b/pages/team-detail/index.wxss
@@ -223,3 +223,9 @@
 .project-list .description span {
   color: #9e9e9e;
 }
+.no-works {
+  color: #cfcfcf;
+  font-size: 30rpx;
+  line-height: 100rpx;
+  padding-left: 35rpx;
+}
