--- a/pages/team-detail/index.wxss
+++ b/pages/team-detail/index.wxss
@@ -1,5 +1,5 @@
 .team-info {
-  padding: 16px 0;
+  padding: 32rpx 0;
 }
 .team-info .avatar {
   display: block;
@@ -11,20 +11,23 @@
 
 .team-info .nickname {
   display: block;
-  margin: 12px auto;
+  margin: 30rpx auto 0;
   text-align: center;
   color: #ff6700;
-  font-size: 16px;
+  font-size: 30rpx;
+  line-hieght: 30rpx;
 }
 .team-info .team-hourly-money {
   display: block;
-  margin: 12px auto;
+  margin: 22rpx auto;
   text-align: center;
-  color: #666;
-  font-weight: 700;
-  font-size: 13px;
+  color: #4b4b4b;
+  font-size: 26rpx;
+  line-height: 26rpx;
 }
-
+.team-hourly-money .hourly {
+  color: #9e9e9e;
+}
 .team-info .icon {
   width: 18px;
   height: 16px;
@@ -32,12 +35,35 @@
 
 .team-slogan {
   display: block;
-  margin: 12px auto 0;
+  margin: 0 auto;
   text-align: center;
-  color: #666;
-  font-size: 13px;
+  color: #6e6e70;
+  font-size: 26rpx;
+  padding: 0 90rpx;
 }
-
+.team-info-desp {
+  color: #777;
+  font-size: 30rpx;
+  border-top: 1px solid #f4f4f4;
+  padding: 30rpx;
+}
+.team-info-desp p {
+  display: block;
+  margin-bottom: 20rpx;
+}
+.team-info-desp .team-icon {
+  width: 32rpx;
+  height: 25rpx;
+  margin-right: 20rpx;
+}
+.desp-content, .desp-time {
+  font-size: 26rpx;
+  color: #4b4b4b;
+  line-height: 39rpx;
+}
+.desp-time {
+  margin-bottom: 12rpx;
+}
 .team-info-list {
   border-top: 1px solid #f4f4f4;
   padding: 15px;
@@ -63,44 +89,83 @@
 }
 
 .team-card {
-  border-top: 12px solid #f4f4f4;
+  border-top: 20rpx solid #f4f4f4;
 }
-
+.team-card .team-icon {
+  width: 32rpx;
+  height: 37rpx;
+  vertical-align: middle;
+  margin-right: 22rpx;
+}
 .team-card .title {
-  display: flex;
-  height: 40px;
-  padding: 0 15px;
-  line-height: 40px;
-  font-size: 16px;
-  font-weight: 400;
+  padding: 21rpx 30rpx;
+  font-size: 30rpx;
+  line-height: 30rpx;
   color: #777777;
   border-bottom: 1px solid #f4f4f4;
+  display: block;
 }
-
+.team-card .word {
+  position:relative;
+  top:4rpx;
+}
 .team-card .body {
   height: 50px;
   line-height: 50px;
   padding-left: 16px;
   font-size: 15px;
 }
-
+.team-member {
+  padding: 32rpx 30rpx;
+  font-size: 30rpx;
+  line-height: 30rpx;
+  color: #777777;
+  border-top: 20rpx solid #f4f4f4;
+  display: flex;
+}
+.team-member .team-icon {
+  width: 33rpx;
+  height: 36rpx;
+  vertical-align: middle;
+  margin-right: 24rpx;
+}
+.team-member .word {
+  margin-top: 6rpx;
+}
+.team-member span {
+  flex:1;
+  display:block;
+  text-align:right;
+  color: #cfcfcf;
+  line-height: 30rpx;
+  margin-top: 6rpx;
+}
 .team-card label {
   color: #aaaaaa;
   padding-right: 5px;
 }
-
+.team-card .skill {
+  height: auto;
+  line-height: 36rpx;
+  padding-top: 19rpx;
+}
 .skill span {
   display: inline-block;
-  padding: 4px 9px;
-  margin-right: 7px;
-  margin-bottom: 7px;
-  font-size: 12px;
-  color: #aaaaaa;
-  border: 1px solid #aaaaaa;
-  border-radius: 18px;
-  line-height: 1;
+  padding: 0 10px;
+  height: 36rpx;
+  margin-right: 19rpx;
+  margin-bottom: 19rpx;
+  font-size: 24rpx;
+  color: #6e6e70;
+  border-radius: 60rpx;
+  line-height: 36rpx;
+  background-color: #eef1f8;
 }
-
+.team-card .cases-icon {
+  width: 33rpx;
+  height: 23rpx;
+  margin-top: 4rpx;
+}
 .team-card .title span{
   flex: 1;
   width: 100%;
@@ -147,9 +212,9 @@
 }
 
 .icon-arrow {
-  width: 8px;
-  height: 14px;
-  margin-left: 8px;
+  width: 16rpx;
+  height: 28rpx;
+  margin-left: 14rpx;
   vertical-align: -1px;
 }
 
